// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildCoverage renders with build 1`] = `
<div
  class="css-6e7pcg e18p2v0b0"
>
  <div
    class="css-1lns0ip-TreeWrapper e12jzojo2"
  >
    <div
      class="css-qg2csp-TreeSummary e12jzojo3"
    >
      <p>
        Data from 
        <a>
          getsentry/zeus#650
        </a>
      </p>
      <p>
        <strong>
          Diff:
        </strong>
         88% lines covered (1628 / 1838)
      </p>
      <p>
        <strong>
          Overall:
        </strong>
         66% lines covered (6127 / 9187)
      </p>
    </div>
  </div>
  <div
    class="css-1g20n6p-ResultGrid-StyledResultGrid ec3zpek0"
  >
    <div
      class="ec3zpek1 ResultGrid-Header css-1dcku6g-Header-StyledHeader"
    >
      <div
        class="erefeu21 ResultGrid-Column css-1oad8ub-Column"
      />
      <div
        class="erefeu21 ResultGrid-Column css-1sv4red-Column"
        style="text-align:right"
        width="250"
      >
        Diff
      </div>
      <div
        class="erefeu21 ResultGrid-Column css-1sv4red-Column"
        style="text-align:right"
        width="250"
      >
        Overall
      </div>
    </div>
    <div
      class="good ec3zpek2 ResultGrid-Row css-17yril0-Row-StyledRow"
    >
      <div
        class="ec3zpek3 ResultGrid-Column css-2j6i3a-Column-StyledColumn"
      >
        <a>
          conftest.py
        </a>
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
         
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        0 / 0
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        100%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        1 / 1
      </div>
    </div>
    <div
      class="bad ec3zpek2 ResultGrid-Row css-17yril0-Row-StyledRow"
    >
      <div
        class="ec3zpek3 ResultGrid-Column css-2j6i3a-Column-StyledColumn"
      >
        <a>
          setup.py
        </a>
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        0%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        0 / 8
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        0%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        0 / 8
      </div>
    </div>
    <div
      class="warn ec3zpek2 ResultGrid-Row css-17yril0-Row-StyledRow"
    >
      <div
        class="ec3zpek3 ResultGrid-Column css-2j6i3a-Column-StyledColumn"
      >
        <a>
          tests/zeus
        </a>
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        99%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        1,528 / 1530
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        99%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        1,528 / 1530
      </div>
    </div>
    <div
      class="bad ec3zpek2 ResultGrid-Row css-17yril0-Row-StyledRow"
    >
      <div
        class="ec3zpek3 ResultGrid-Column css-2j6i3a-Column-StyledColumn"
      >
        <a>
          webapp
        </a>
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        33%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        50 / 150
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        6%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        125 / 1840
      </div>
    </div>
    <div
      class="bad ec3zpek2 ResultGrid-Row css-17yril0-Row-StyledRow"
    >
      <div
        class="ec3zpek3 ResultGrid-Column css-2j6i3a-Column-StyledColumn"
      >
        <a>
          zeus
        </a>
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        33%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        50 / 150
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        77%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        4,473 / 5808
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildCoverage renders without build 1`] = `
<div
  class="css-6e7pcg e18p2v0b0"
>
  <div
    class="css-1lns0ip-TreeWrapper e12jzojo2"
  >
    <div
      class="css-qg2csp-TreeSummary e12jzojo3"
    >
      <p>
        <strong>
          Diff:
        </strong>
         88% lines covered (1628 / 1838)
      </p>
      <p>
        <strong>
          Overall:
        </strong>
         66% lines covered (6127 / 9187)
      </p>
    </div>
  </div>
  <div
    class="css-1g20n6p-ResultGrid-StyledResultGrid ec3zpek0"
  >
    <div
      class="ec3zpek1 ResultGrid-Header css-1dcku6g-Header-StyledHeader"
    >
      <div
        class="erefeu21 ResultGrid-Column css-1oad8ub-Column"
      />
      <div
        class="erefeu21 ResultGrid-Column css-1sv4red-Column"
        style="text-align:right"
        width="250"
      >
        Diff
      </div>
      <div
        class="erefeu21 ResultGrid-Column css-1sv4red-Column"
        style="text-align:right"
        width="250"
      >
        Overall
      </div>
    </div>
    <div
      class="good ec3zpek2 ResultGrid-Row css-17yril0-Row-StyledRow"
    >
      <div
        class="ec3zpek3 ResultGrid-Column css-2j6i3a-Column-StyledColumn"
      >
        <a>
          conftest.py
        </a>
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
         
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        0 / 0
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        100%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        1 / 1
      </div>
    </div>
    <div
      class="bad ec3zpek2 ResultGrid-Row css-17yril0-Row-StyledRow"
    >
      <div
        class="ec3zpek3 ResultGrid-Column css-2j6i3a-Column-StyledColumn"
      >
        <a>
          setup.py
        </a>
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        0%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        0 / 8
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        0%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        0 / 8
      </div>
    </div>
    <div
      class="warn ec3zpek2 ResultGrid-Row css-17yril0-Row-StyledRow"
    >
      <div
        class="ec3zpek3 ResultGrid-Column css-2j6i3a-Column-StyledColumn"
      >
        <a>
          tests/zeus
        </a>
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        99%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        1,528 / 1530
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        99%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        1,528 / 1530
      </div>
    </div>
    <div
      class="bad ec3zpek2 ResultGrid-Row css-17yril0-Row-StyledRow"
    >
      <div
        class="ec3zpek3 ResultGrid-Column css-2j6i3a-Column-StyledColumn"
      >
        <a>
          webapp
        </a>
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        33%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        50 / 150
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        6%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        125 / 1840
      </div>
    </div>
    <div
      class="bad ec3zpek2 ResultGrid-Row css-17yril0-Row-StyledRow"
    >
      <div
        class="ec3zpek3 ResultGrid-Column css-2j6i3a-Column-StyledColumn"
      >
        <a>
          zeus
        </a>
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        33%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        50 / 150
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        77%
      </div>
      <div
        class="ec3zpek3 ResultGrid-Column css-vs5hwq-Column-StyledColumn"
        style="text-align:right"
        width="120"
      >
        4,473 / 5808
      </div>
    </div>
  </div>
</div>
`;
